<resources>
    <string name="app_name">Concert Tickets</string>
    <string name="txtTitle">Ticket Vault</string>
    <string name="txtTickets">Number of Tickets</string>
    <string name="prompt">Select Group</string>
    <string name="decription">Concert Image</string>
    <string name="btnCost">FIND THE COST</string>
    <string name="Results">txtResult</string>
    <string-array name="txtGroup">
        <item>Life Revealed</item>
        <item>Spatial Sense</item>
        <item>Zig Zag</item>

    </string-array>
    <string name="imgConcert">Concert</string>
</resources>
